Add a register endpoint
